--- a/style.css
+++ b/style.css
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html> 
+<html>
+           body{
+        		background-color: maroon;
+        		color: white;
+      		}
+      		#profile-pic{
+        		height: 200px;
+        		width: 200px;
+        		text-align: center;
+      		}
+		    .fav-songs{
+			     font-weight: bold;
+		    }
+<html>
