--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 
-           body{
+            body{
         		background-color: maroon;
         		color: white;
-			   	
-      		}
-      		#profile-pic{
+			text-align: center;
+            }
+            #profile-pic{
         		height: 200px;
         		width: 200px;
         		text-align: center;
-      		}
-			.fav-songs{
-			     font-weight: bold;
-		    }
+            }
+            .fav-songs{
+			font-weight: bold;
+            }
 
 	
