--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
             body{
-        		background-color: maroon;
+        		background-color: darkred;
         		color: white;
             }
             #profile-pic{
@@ -14,5 +14,9 @@
             table, th, td{
                         border: 1px;
             }
+            a:link    {color:green; background-color:transparent; text-decoration:none}
+            a:visited {color:pink; background-color:transparent; text-decoration:none}
+            a:hover   {color:red; background-color:transparent; text-decoration:underline}
+            a:active  {color:yellow; background-color:transparent; text-decoration:underline}
 
 	
