--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
             body{
-        		background-color: darkred;
+        		background-color: midnightblue;
         		color: white;
             }
             #profile-pic{
