--- a/style.css
+++ b/style.css
@@ -14,9 +14,9 @@
             table, th, td{
                         border: 1px;
             }
-            a:link    {color:green; background-color:transparent; text-decoration:none}
-            a:visited {color:pink; background-color:transparent; text-decoration:none}
-            a:hover   {color:red; background-color:transparent; text-decoration:underline}
+            a:link    {color:blue; background-color:transparent; text-decoration:none}
+            a:visited {color:lightblue; background-color:transparent; text-decoration:none}
+            a:hover   {color:white; background-color:transparent; text-decoration:underline}
             a:active  {color:yellow; background-color:transparent; text-decoration:underline}
 
 	
