--- a/style.css
+++ b/style.css
@@ -18,5 +18,7 @@
             a:visited {color:lightblue; background-color:transparent; text-decoration:none}
             a:hover   {color:white; background-color:transparent; text-decoration:underline}
             a:active  {color:yellow; background-color:transparent; text-decoration:underline}
-
+            #grad{
+                background: linear-gradient(blue, white);
+            }
 	
